--- a/Changes
+++ b/Changes
@@ -4,3 +4,5 @@ Revision history for Perl extension Net::RDEP.
 	- original version; created by h2xs 1.23 with options
 		-AX -n Net::RDEP
 
+0.02  Fri Nov 12 13:39:45 EST 2004
+	- couple of minor tweaks
