--- a/Changes
+++ b/Changes
@@ -6,3 +6,8 @@ Revision history for Perl extension Net::RDEP.
 
 0.02  Fri Nov 12 13:39:45 EST 2004
 	- couple of minor tweaks
+
+0.03 Jun 21 11:58:31 EDT 2005
+	- updated typo in examples
+	- update RDEP.pm to re-send timeout with 'get'
+	- thanks to feedback from Shawn Romines @ Rackspace.com
